--- a/MojiCollaTool/MojiCollaTool/MainWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MainWindow.xaml
@@ -21,27 +21,28 @@
             <Button x:Name="SaveProjectButton" Content="Save Project"/>
             <Button x:Name="OutputImageButton" Content="Output Image" Click="OutputImageButton_Click"/>
         </StackPanel>
-        <Button x:Name="AddTextButton" Content="Add Text" Grid.Row="0" Grid.Column="1" Click="AddTextButton_Click"/>
+        <Button x:Name="AddTextButton" Grid.Row="0" Grid.Column="1" Content="Add Text" Click="AddTextButton_Click"/>
         <Grid x:Name="CanvasGrid" Grid.Row="1" Grid.Column="0" Background="Gray">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
             <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
                 <Canvas x:Name="MainCanvas" Background="Gray" Grid.Column="0">
                     <Image x:Name="MainImage" PreviewMouseLeftButtonDown="MainImage_PreviewMouseLeftButtonDown"/>
                 </Canvas>
             </ScrollViewer>
         </Grid>
-        <StackPanel x:Name="ControlPanel" Orientation="Vertical" Grid.Row="1" Grid.Column="1" IsEnabled="False">
-            <Label x:Name="MojiIdLabel" Content="Moji Id:0"/>
-            <GroupBox Header="Text">
-                <TextBox x:Name="TextTextBox" Text="サンプル"/>
-            </GroupBox>
-        </StackPanel>
+        <GroupBox Header="Moji List" Grid.Row="1" Grid.Column="1">
+            <ListView x:Name="MojiListView" Grid.Row="1" Grid.Column="1">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="ID:"/>
+                                <TextBlock Text="{Binding Id}"/>
+                            </StackPanel>
+                            <TextBlock Text="{Binding ExampleText}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </GroupBox>
     </Grid>
 </Window>
