文字のドラッグによる移動機能追加 文字情報画面のダブルクリック呼び出しを実装 文字情報画面と表示の連携処理を実装 上下コントロールの校則操作などを実装

--- a/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
@@ -26,9 +26,9 @@
             <GroupBox Header="Location">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="X:"/>
-                    <local:UpDownTextBox x:Name="LocationXTextBox"/>
+                    <local:UpDownTextBox x:Name="LocationXTextBox" ValueChanged="LocationTextBox_ValueChanged"/>
                     <Label Content="Y:"/>
-                    <local:UpDownTextBox x:Name="LocationYTextBox"/>
+                    <local:UpDownTextBox x:Name="LocationYTextBox" ValueChanged="LocationTextBox_ValueChanged"/>
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Direction">
