--- a/MojiCollaTool/MojiCollaTool/ColorSelector/ColorSelectorWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/ColorSelector/ColorSelectorWindow.xaml
@@ -1,19 +1,18 @@
-﻿<Window x:Class="MojiCollaTool.WpfColorPicker.ColorPickerWindow"
+﻿<Window x:Class="MojiCollaTool.ColorSelector.ColorSelectorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MojiCollaTool.WpfColorPicker"
+        xmlns:local="clr-namespace:MojiCollaTool.ColorSelector"
         xmlns:cp="clr-namespace:WpfColorPicker"
         mc:Ignorable="d"
-        Background="#28282E"
-        Title="ColorPickerWindow" Height="400" Width="800">
+        Title="ColorSelectorWindow" Height="400" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="0" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="auto"/>
@@ -29,6 +28,6 @@
                 
             </DockPanel>
         </Grid>
-        <cp:ColorPicker Grid.Column="1" Width="300"/>
+        <cp:ColorPicker x:Name="ManualColorPicker" Grid.Column="1" Width="300"/>
     </Grid>
 </Window>
